traefikingsvcrule.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  rules:
  - host: mon.machine.kubernetes
    http:
      paths:
      - path: /wa
        backend:
          serviceName: webapp-svc
          servicePort: 80
